items and fridges can be added, modified and deleted, users can be created and modified

--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FridgeInventory\FridgeInventory.csproj" />
+  </ItemGroup>
+
 </Project>
